--- a/app/src/main/res/layout/eskills_info_card1.xml
+++ b/app/src/main/res/layout/eskills_info_card1.xml
@@ -17,7 +17,7 @@
             android:gravity="center"
             android:textSize="18sp"
             android:text="@string/eskills_v2_card_5_title"
-            android:textColor="#6200F9"
+            android:textColor="@color/eskills_light_purple"
             app:layout_constraintTop_toTopOf="parent"
             />
         <TextView
