--- a/aptoide-views/src/main/res/drawable/eskills_progress_bar.xml
+++ b/aptoide-views/src/main/res/drawable/eskills_progress_bar.xml
@@ -14,7 +14,7 @@
             android:centerX="0.40"
             android:endColor="#7A26FA"
             android:gradientRadius="0.5"
-            android:startColor="#6200F9"
+            android:startColor="@color/eskills_light_purple"
             android:type="linear" />
       </shape>
     </clip>
