--- a/app/src/main/res/layout/eskills_flow_graphic.xml
+++ b/app/src/main/res/layout/eskills_flow_graphic.xml
@@ -20,11 +20,10 @@
       android:id="@+id/eskills_info_graphics1"
       android:layout_width="0dp"
       android:layout_height="104dp"
-      android:layout_marginStart="40dp"
       android:layout_marginTop="24dp"
-      android:scaleType="fitStart"
+      android:scaleType="fitCenter"
       android:src="@drawable/eskills_info_graphics1"
-      app:layout_constraintStart_toStartOf="@id/eskills_info_graphics_title"
+      app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/eskills_info_graphics_title"
       />
 
@@ -35,7 +34,7 @@
       android:layout_height="40dp"
       android:layout_marginTop="8dp"
       android:text="@string/eskills_v2_how_1"
-      app:layout_constraintStart_toStartOf="@id/eskills_info_graphics1"
+      app:layout_constraintLeft_toLeftOf="@id/eskills_info_graphics1"
       app:layout_constraintTop_toBottomOf="@id/eskills_info_graphics1"
       />
 
@@ -47,7 +46,7 @@
       android:layout_marginStart="40dp"
       android:layout_marginTop="8dp"
       android:text="@string/eskills_v2_how_2"
-      app:layout_constraintStart_toEndOf="@id/eskills_info_graphics_text1"
+      app:layout_constraintLeft_toRightOf="@id/eskills_info_graphics_text1"
       app:layout_constraintTop_toBottomOf="@id/eskills_info_graphics1"
       />
 
@@ -58,7 +57,7 @@
       android:layout_marginTop="8dp"
       android:background="@drawable/appc_pink_rounded_bg_alpha"
       android:padding="8dp"
-      app:layout_constraintStart_toStartOf="@id/eskills_info_graphics_text1"
+      app:layout_constraintLeft_toLeftOf="@id/eskills_info_graphics_text1"
       app:layout_constraintTop_toBottomOf="@id/eskills_info_graphics_text1"
       >
 
@@ -94,7 +93,7 @@
       android:layout_marginTop="40dp"
       android:scaleType="fitStart"
       android:src="@drawable/eskills_info_graphics2"
-      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@id/wallet_disclaimer_info"
       />
 
@@ -105,7 +104,7 @@
       android:layout_height="40dp"
       android:layout_marginTop="8dp"
       android:text="@string/eskills_v2_how_3"
-      app:layout_constraintStart_toStartOf="@id/eskills_info_graphics_text1"
+      app:layout_constraintLeft_toLeftOf="@id/eskills_info_graphics_text1"
       app:layout_constraintTop_toBottomOf="@id/eskills_info_graphics2"
       />
 
@@ -116,7 +115,7 @@
       android:layout_height="40dp"
       android:layout_marginTop="8dp"
       android:text="@string/eskills_v2_how_4"
-      app:layout_constraintStart_toStartOf="@id/eskills_info_graphics_text2"
+      app:layout_constraintLeft_toLeftOf="@id/eskills_info_graphics_text2"
       app:layout_constraintTop_toBottomOf="@id/eskills_info_graphics2"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
