--- a/app/src/main/res/layout/eskills_info_card1.xml
+++ b/app/src/main/res/layout/eskills_info_card1.xml
@@ -24,12 +24,21 @@
             android:id="@+id/value_proposition_card_body"
             style="@style/Aptoide.TextView.Regular.S"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:layout_marginHorizontal="24dp"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/card_title"
+            app:layout_constraintBottom_toTopOf="@id/guideline"
             android:text="@string/eskills_v2_card_5_body"
             android:textColor="@color/black"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="88dp"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
