--- a/app/src/main/res/layout/eskills_info_card1.xml
+++ b/app/src/main/res/layout/eskills_info_card1.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/eskills_info_card1_bg"
     android:orientation="vertical"
-    android:paddingTop="32dp"
+    android:paddingTop="24dp"
     android:layout_marginHorizontal="8dp"
     >
         <TextView
@@ -14,7 +14,7 @@
             style="@style/Aptoide.TextView.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:textSize="18sp"
             android:text="@string/eskills_v2_card_5_title"
             android:textColor="@color/eskills_light_purple"
@@ -25,9 +25,11 @@
             style="@style/Aptoide.TextView.Regular.S"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:layout_marginHorizontal="24dp"
             android:gravity="center"
+            android:maxLines="3"
             app:layout_constraintTop_toBottomOf="@id/card_title"
             app:layout_constraintBottom_toTopOf="@id/guideline"
             android:text="@string/eskills_v2_card_5_body"
@@ -39,6 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="88dp"
+            app:layout_constraintGuide_begin="96dp"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
