--- a/app/src/main/res/layout/eskills_info_card2.xml
+++ b/app/src/main/res/layout/eskills_info_card2.xml
@@ -18,6 +18,7 @@
       android:text="@string/eskills_v2_card_6_title"
       android:textColor="@color/yellow_eskills"
       android:textSize="18sp"
+      android:maxLines="1"
       app:layout_constraintTop_toTopOf="parent"
       />
 
@@ -32,10 +33,11 @@
       android:id="@+id/value_proposition_card_body"
       style="@style/Aptoide.TextView.Regular.S.White"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:layout_marginHorizontal="24dp"
       android:layout_marginBottom="8dp"
       android:gravity="center"
+      android:maxLines="3"
       android:text="@string/eskills_v2_card_6_body"
       app:layout_constraintTop_toBottomOf="@id/guideline"
       app:layout_constraintBottom_toBottomOf="parent"
