--- a/app/src/main/res/layout/eskills_info_card4.xml
+++ b/app/src/main/res/layout/eskills_info_card4.xml
@@ -28,7 +28,6 @@
       android:layout_height="wrap_content"
       android:gravity="center"
       android:text="@string/eskills_v2_card_8_title"
-      android:lines="2"
       android:textColor="@color/eskills_yellow"
       android:textSize="18sp"
       app:layout_constraintTop_toBottomOf="@id/appc_wallet_icon"
@@ -39,14 +38,23 @@
       android:id="@+id/value_proposition_card_body"
       style="@style/Aptoide.TextView.Regular.S.White"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginHorizontal="24dp"
-      android:layout_marginBottom="8dp"
+      android:layout_height="0dp"
+      android:layout_marginHorizontal="20dp"
+      android:layout_marginVertical="4dp"
       android:gravity="center"
+      android:maxLines="3"
       android:text="@string/eskills_v2_card_8_body"
       app:layout_constraintTop_toBottomOf="@id/card_title"
+      app:layout_constraintBottom_toTopOf="@id/guideline"
       />
 
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_end="152dp"
+      />
   <ImageView
       android:layout_width="124dp"
       android:layout_height="152dp"
