--- a/app/src/main/res/layout/eskills_info_card5.xml
+++ b/app/src/main/res/layout/eskills_info_card5.xml
@@ -25,12 +25,21 @@
       android:id="@+id/value_proposition_card_body"
       style="@style/Aptoide.TextView.Regular.S"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:layout_marginHorizontal="24dp"
-      android:layout_marginTop="8dp"
-      android:gravity="center"
+      android:layout_marginVertical="4dp"
+      android:gravity="center_horizontal"
+      android:maxLines="3"
       android:text="@string/eskills_v2_card_9_body"
       app:layout_constraintTop_toBottomOf="@id/card_title"
+      app:layout_constraintBottom_toTopOf="@id/guideline"
       android:textColor="@color/black"
+      />
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_begin="96dp"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
