--- a/app/src/main/res/layout/eskills_info_card1.xml
+++ b/app/src/main/res/layout/eskills_info_card1.xml
@@ -17,6 +17,7 @@
             android:gravity="center_horizontal"
             android:textSize="18sp"
             android:text="@string/eskills_v2_card_5_title"
+            android:textStyle="bold"
             android:textColor="@color/eskills_light_purple"
             app:layout_constraintTop_toTopOf="parent"
             />
