--- a/app/src/main/res/layout/eskills_info_card2.xml
+++ b/app/src/main/res/layout/eskills_info_card2.xml
@@ -17,6 +17,7 @@
       android:gravity="center"
       android:text="@string/eskills_v2_card_6_title"
       android:textColor="@color/yellow_eskills"
+      android:textStyle="bold"
       android:textSize="18sp"
       android:maxLines="1"
       app:layout_constraintTop_toTopOf="parent"
