--- a/aptoide-views/src/main/res/drawable/eskills_progress_bar.xml
+++ b/aptoide-views/src/main/res/drawable/eskills_progress_bar.xml
@@ -2,8 +2,12 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <item android:id="@android:id/background">
-    <color android:color="@android:color/transparent" />
+  <item
+      android:id="@android:id/background"
+      android:gravity="center_vertical|fill_horizontal">
+    <shape android:shape="rectangle">
+      <solid android:color="#39cccccc" />
+    </shape>
   </item>
 
   <item android:id="@android:id/progress">
