[APP-2501] Fix padding for the bonus skelleton

--- a/app/src/main/res/layout/card_new_package.xml
+++ b/app/src/main/res/layout/card_new_package.xml
@@ -209,7 +209,9 @@
         android:layout_width="82dp"
         android:layout_height="72dp"
         android:translationX="-16dp"
+        app:enable_card_padding="false"
         android:visibility="gone"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:skeleton_color="?attr/backgroundCardSecondaryColor"
