--- a/app-games/src/main/res/values/colors.xml
+++ b/app-games/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
   <color name="purple_700">#FF3700B3</color>
   <color name="teal_200">#FF03DAC5</color>
   <color name="teal_700">#FF018786</color>
-  <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="primary">#FFC8ED4F</color>
+  <color name="grey">#FF595959</color>
+  <color name="black">#FF1E1E26</color>
 </resources>
