--- a/app/src/main/res/layout/eskills_faqs.xml
+++ b/app/src/main/res/layout/eskills_faqs.xml
@@ -39,5 +39,6 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       app:layout_constraintTop_toBottomOf="@id/eskills_faqs_title"
+      android:visibility="gone"
       />
 </LinearLayout>
