--- a/app/src/main/res/layout/eskills_info_card4.xml
+++ b/app/src/main/res/layout/eskills_info_card4.xml
@@ -14,6 +14,7 @@
       android:id="@+id/appc_wallet_icon"
       android:layout_width="32dp"
       android:layout_height="32dp"
+      android:importantForAccessibility="no"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +60,7 @@
   <ImageView
       android:layout_width="124dp"
       android:layout_height="152dp"
+      android:importantForAccessibility="no"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
