--- a/app/src/main/res/layout/eskills_info_card5.xml
+++ b/app/src/main/res/layout/eskills_info_card5.xml
@@ -5,7 +5,7 @@
     android:layout_width="240dp"
     android:layout_height="328dp"
     android:layout_marginHorizontal="8dp"
-    android:background="@drawable/eskills_info_card5_bg"
+    android:background="@drawable/eskills_info_card5_bg2"
     android:orientation="vertical"
     android:paddingTop="32dp"
     >
@@ -18,7 +18,7 @@
       android:gravity="center"
       android:text="@string/eskills_v2_card_9_title"
       android:textStyle="bold"
-      android:textColor="@color/eskills_light_purple"
+      android:textColor="@color/eskills_yellow"
       android:textSize="18sp"
       app:layout_constraintTop_toTopOf="parent"
       />
@@ -34,7 +34,7 @@
       android:text="@string/eskills_v2_card_9_body"
       app:layout_constraintTop_toBottomOf="@id/card_title"
       app:layout_constraintBottom_toTopOf="@id/guideline"
-      android:textColor="@color/black"
+      android:textColor="@color/white"
       />
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline"
@@ -42,5 +42,15 @@
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_begin="96dp"
+      />
+  <ImageView
+      android:layout_width="wrap_content"
+      android:layout_height="144dp"
+      android:importantForAccessibility="no"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      android:scaleType="fitCenter"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:src="@drawable/eskills_info_card_5_img"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
