[APP-2668] Fix max lines on eskills view title

--- a/app/src/main/res/layout/fragment_eskills_info.xml
+++ b/app/src/main/res/layout/fragment_eskills_info.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="16dp"
-            android:lines="2"
+            android:maxLines="2"
             android:text="@string/eskills_v2_page_without_withdrawal_body_"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
